k8s-helm/templates/services.yaml
#
# Copyright © 2016-2020 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  name: tb-mqtt-transport
spec:
  type: LoadBalancer
  selector:
    app: tb-mqtt-transport
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: tb-http-transport
spec:
  type: ClusterIP
  selector:
    app: tb-http-transport
  ports:
  - port: 8080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tb-coap-transport
spec:
  type: LoadBalancer
  selector:
    app: tb-coap-transport
  ports:
  - port: 5683
    name: coap
    protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: tb-web-ui
spec:
  type: ClusterIP
  selector:
    app: tb-web-ui
  ports:
  - port: 8080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tb-node
spec:
  type: ClusterIP
  selector:
    app: tb-node
  ports:
    - port: 8080
      name: http
