k8s-helm/templates/ingress.yaml
#
# Copyright © 2016-2020 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tb-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/.*
        backend:
          serviceName: tb-http-transport
          servicePort: 8080
      - path: /api/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /swagger.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /webjars.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /v2/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /static/rulenode/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /oauth2/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /login/oauth2/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
      - path: /.*
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
---
